syntax = "proto3";

package pb.svc.cache;
option go_package = "github.com/byeol-i/battery-level-checker/pb/svc/cache";

service Cache {
    rpc WriteMsg(WriteMsgReq) returns (WriteMsgRes);
    rpc GetMsg(GetMsgReq) returns (GetMsgRes);
}

message WriteMsgReq {
    string deviceId = 1;
    bytes value = 2;
}

message WriteMsgRes {
    // unit.common.ReturnMsg result = 1;
}

message GetMsgReq {
    string deviceId = 1;
}

message GetMsgRes {
    string result = 1;
}

